--- a/src/Makefile
+++ b/src/Makefile
@@ -6,7 +6,7 @@ TARGET = cpuintrinsics
 all: $(TARGET)
 
 $(TARGET): $(TARGET).c
-	$(CC) $(CFLAGS) -o $(TARGET) $(TARGET).c
+	$(CC) $(CFLAGS) -o $(TARGET) $(TARGET).c -mrdrnd
 
 clean:
 	rm -f $(TARGET)
